--- a/base/src/main/res/layout/categorydesign.xml
+++ b/base/src/main/res/layout/categorydesign.xml
@@ -1,79 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/review_card_section"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    app:cardBackgroundColor="@color/white"
+    app:cardCornerRadius="10dp"
+    app:cardElevation="5dp"
+    app:cardUseCompatPadding="true">
 
-    <RelativeLayout
-
-        android:id="@+id/rpickupsection"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="3dp"
-        android:background="@drawable/pickupborder">
-
-        <ImageView
-            android:id="@+id/checks"
-            android:layout_width="30dp"
-            android:layout_marginStart="5dp"
-            android:layout_marginTop="5dp"
-            android:layout_height="30dp"
-            android:src="@drawable/checkmark"/>
-
-        <TextView
-            android:id="@+id/rheading"
-            android:layout_toRightOf="@+id/checks"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingStart="3dp"
-            android:layout_marginTop="5dp"
-            android:text="@string/pickupavailable"
-            android:textColor="@color/black"
-            android:textSize="20sp"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/raddfirst"
+        <RelativeLayout
+            android:id="@+id/rpickupsection"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/rheading"
-            android:text="address1"
-            android:layout_marginTop="3dp"
-            android:textColor="@color/black"
-            android:padding="5dp"
-            android:textSize="15sp"/>
+            android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/raddsecond"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/raddfirst"
-            android:layout_marginTop="3dp"
-            android:padding="5dp"
-            android:text="address2"
-            android:textColor="@color/black"
-            android:textSize="15sp" />
+                <ImageView
+                    android:id="@+id/checks"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginTop="5dp"
+                    android:src="@drawable/checkmark" />
 
-        <TextView
-            android:layout_marginTop="3dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="pickup available"
-            android:layout_below="@id/raddsecond"
-            android:id="@+id/rpickuptime"
-            android:textColor="@color/black"
-            android:textSize="15sp"
-            android:padding="5dp"/>
+                <TextView
+                    android:id="@+id/rheading"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:layout_toEndOf="@+id/checks"
+                    android:paddingStart="3dp"
+                    android:paddingEnd="3dp"
+                    android:text="@string/pickupavailable"
+                    android:textColor="@color/black"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
 
-        <TextView
-            android:layout_marginTop="3dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="phone number"
-            android:layout_below="@id/rpickuptime"
-            android:id="@+id/rphonenumber"
-            android:textColor="@color/black"
-            android:textSize="15sp"
-            android:padding="5dp"/>
-    </RelativeLayout>
+                <TextView
+                    android:id="@+id/raddfirst"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/rheading"
+                    android:layout_marginTop="3dp"
+                    android:padding="3dp"
+                    android:textColor="@color/black"
+                    android:textSize="15sp" />
 
-</RelativeLayout>
+                <TextView
+                    android:id="@+id/raddsecond"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/raddfirst"
+                    android:layout_marginTop="3dp"
+                    android:padding="3dp"
+                    android:textColor="@color/black"
+                    android:textSize="15sp" />
+
+                <TextView
+                    android:id="@+id/rpickuptime"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/raddsecond"
+                    android:layout_marginTop="3dp"
+                    android:padding="3dp"
+                    android:textColor="@color/black"
+                    android:textSize="15sp" />
+
+                <TextView
+                    android:id="@+id/rphonenumber"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/rpickuptime"
+                    android:layout_marginTop="3dp"
+                    android:padding="3dp"
+                    android:textColor="@color/black"
+                    android:textSize="15sp" />
+        </RelativeLayout>
+</androidx.cardview.widget.CardView>
