--- a/base/src/main/res/layout/m_productview.xml
+++ b/base/src/main/res/layout/m_productview.xml
@@ -72,13 +72,11 @@
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.cardview.widget.CardView>
 
-
             <androidx.cardview.widget.CardView
                 android:id="@+id/review_card_section"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="15dp"
-                android:layout_marginBottom="30dp"
+                android:layout_margin="10dp"
                 bind:cardBackgroundColor="@color/white"
                 bind:cardCornerRadius="10dp"
                 bind:cardElevation="5dp"
@@ -319,109 +317,115 @@
                 bind:layout_constraintTop_toBottomOf="@+id/variant_container"
                 bind:texttype="normal" />
 
-            <RelativeLayout
-
-                android:id="@+id/pickupsection"
+            <androidx.cardview.widget.CardView
+                android:id="@+id/card"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="3dp"
-                bind:layout_constraintTop_toBottomOf="@id/variant_available_qty"
-                android:background="@drawable/pickupborder">
+                android:background="@color/white"
+                android:visibility="gone"
+                bind:cardCornerRadius="8dp"
+                bind:cardUseCompatPadding="true"
+                bind:layout_constraintDimensionRatio="H,1:1.6"
+                bind:layout_constraintTop_toBottomOf="@id/variant_available_qty">
 
-                <ImageView
-                    android:id="@+id/checks"
-                    android:layout_width="30dp"
-                    android:layout_marginTop="5dp"
-                    android:layout_height="30dp"
-                    android:layout_marginStart="5dp"
-                    android:src="@drawable/checkmark"/>
-
-                <TextView
-                    android:id="@+id/heading"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_toRightOf="@+id/checks"
-                    android:paddingStart="3dp"
-                    android:layout_marginTop="5dp"
-                    android:text="@string/pickupavailable"
-                    android:textColor="@color/black"
-                    android:textSize="20sp"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/addfirst"
+                <RelativeLayout
+                    android:id="@+id/pickupsection"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/heading"
-                    android:layout_marginTop="3dp"
-                    android:padding="5dp"
-                    android:text="address1"
-                    android:textColor="@color/black"
-                    android:textSize="15sp" />
+                    android:layout_height="wrap_content">
 
-                <TextView
-                    android:id="@+id/addsecond"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/addfirst"
-                    android:layout_marginTop="3dp"
-                    android:padding="5dp"
-                    android:text="address2"
-                    android:textColor="@color/black"
-                    android:textSize="15sp" />
+                    <ImageView
+                        android:id="@+id/checks"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_marginStart="5dp"
+                        android:layout_marginTop="5dp"
+                        android:src="@drawable/checkmark" />
 
-                <TextView
-                    android:layout_marginTop="3dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="pickup available"
-                    android:layout_below="@id/addsecond"
-                    android:id="@+id/pickuptime"
-                    android:textColor="@color/black"
-                    android:textSize="15sp"
-                    android:padding="5dp"/>
+                    <TextView
+                        android:id="@+id/heading"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:layout_toEndOf="@+id/checks"
+                        android:paddingStart="3dp"
+                        android:paddingEnd="3dp"
+                        android:text="@string/pickupavailable"
+                        android:textColor="@color/black"
+                        android:textSize="20sp"
+                        android:textStyle="bold" />
 
-                <TextView
-                    android:layout_marginTop="3dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="phone number"
-                    android:layout_below="@id/pickuptime"
-                    android:id="@+id/phonenumber"
-                    android:textColor="@color/black"
-                    android:textSize="15sp"
-                    android:padding="5dp"/>
-            </RelativeLayout>
+                    <TextView
+                        android:id="@+id/addfirst"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/heading"
+                        android:layout_marginTop="3dp"
+                        android:padding="3dp"
+                        android:textColor="@color/black"
+                        android:textSize="15sp" />
+
+                    <TextView
+                        android:id="@+id/addsecond"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/addfirst"
+                        android:layout_marginTop="3dp"
+                        android:padding="3dp"
+                        android:textColor="@color/black"
+                        android:textSize="15sp" />
+
+                    <TextView
+                        android:id="@+id/pickuptime"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/addsecond"
+                        android:layout_marginTop="3dp"
+                        android:padding="3dp"
+                        android:textColor="@color/black"
+                        android:textSize="15sp" />
+
+                    <TextView
+                        android:id="@+id/phonenumber"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/pickuptime"
+                        android:layout_marginTop="3dp"
+                        android:padding="3dp"
+                        android:textColor="@color/black"
+                        android:textSize="15sp" />
+                </RelativeLayout>
+            </androidx.cardview.widget.CardView>
 
             <TextView
+                android:id="@+id/checkstoretext"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/checkstores"
-                android:id="@+id/checkstoretext"
-                bind:layout_constraintTop_toBottomOf="@id/pickupsection"
                 android:layout_marginStart="5dp"
                 android:layout_marginTop="3dp"
-                android:textStyle="bold"
+                android:text="@string/checkstores"
+                android:textColor="@color/black"
                 android:textSize="20sp"
-                android:textColor="@color/black"/>
+                android:textStyle="bold"
+                android:visibility="gone"
+                bind:layout_constraintTop_toBottomOf="@id/card" />
 
             <androidx.recyclerview.widget.RecyclerView
-                android:visibility="gone"
+                android:id="@+id/storerecycler"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                bind:layout_constraintTop_toBottomOf="@id/checkstoretext"
-                android:orientation="vertical"
                 android:layout_marginTop="5dp"
-                android:id="@+id/storerecycler"/>
+                android:orientation="vertical"
+                android:visibility="gone"
+                bind:layout_constraintTop_toBottomOf="@id/checkstoretext" />
 
 
             <com.shopify.shopifyapp.customviews.MageNativeTextView
                 android:id="@+id/qty_title_txt"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
                 android:gravity="center"
                 android:text="Quantity"
-                android:layout_marginTop="10dp"
                 bind:layout_constraintTop_toBottomOf="@+id/storerecycler"
                 bind:texttype="normal" />
 
@@ -530,7 +534,6 @@
 
 
             <androidx.appcompat.widget.AppCompatTextView
-                android:visibility="gone"
                 android:id="@+id/yotpo_write_review_but"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -540,14 +543,15 @@
                 android:text="@string/yotpo_rate_product"
                 android:textColor="@android:color/holo_blue_dark"
                 android:textSize="14sp"
+                android:visibility="gone"
                 bind:layout_constraintStart_toStartOf="parent"
                 bind:layout_constraintTop_toBottomOf="@+id/description" />
 
             <RelativeLayout
-                android:visibility="gone"
                 android:id="@+id/yotporeviewsection"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:visibility="gone"
                 bind:layout_constraintTop_toBottomOf="@id/yotpo_write_review_but">
 
 
@@ -555,21 +559,21 @@
                     android:id="@+id/yotpo_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
                     android:layout_marginTop="20dp"
                     android:fontFamily="@font/roboto_medium"
                     android:text="@string/please_select_rating"
-                    android:layout_centerHorizontal="true"
-                    android:textColor="@color/black"/>
+                    android:textColor="@color/black" />
 
                 <RatingBar
                     android:id="@+id/yotpo_rating_bar"
                     style="@style/Widget.AppCompat.RatingBar"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:progressBackgroundTint="@color/gray_color"
                     android:layout_below="@id/yotpo_title"
                     android:layout_centerHorizontal="true"
+                    android:layout_marginTop="10dp"
+                    android:progressBackgroundTint="@color/gray_color"
                     android:progressTint="@color/appTheme" />
 
                 <EditText
@@ -579,9 +583,9 @@
                     android:layout_below="@id/yotpo_rating_bar"
                     android:layout_gravity="end"
                     android:layout_margin="5dp"
+                    android:background="@drawable/edit_border"
                     android:hint="Name"
                     android:padding="5dp"
-                    android:background="@drawable/edit_border"
                     android:textColor="@color/black"
                     android:textColorHint="@color/black"
                     android:textSize="15sp" />
@@ -593,10 +597,10 @@
                     android:layout_below="@id/yotpo_name"
                     android:layout_gravity="end"
                     android:layout_margin="5dp"
+                    android:background="@drawable/edit_border"
                     android:hint="Email"
                     android:padding="5dp"
                     android:textColor="@color/black"
-                    android:background="@drawable/edit_border"
                     android:textColorHint="@color/black"
                     android:textSize="15sp" />
 
@@ -607,9 +611,9 @@
                     android:layout_below="@id/yotpo_email"
                     android:layout_gravity="end"
                     android:layout_margin="5dp"
+                    android:background="@drawable/edit_border"
                     android:hint="Review Title"
                     android:padding="5dp"
-                    android:background="@drawable/edit_border"
                     android:textColor="@color/black"
                     android:textColorHint="@color/black"
                     android:textSize="15sp" />
@@ -651,12 +655,12 @@
                 android:onClick="@{(view) -> clickhandlers.addtoWish(view,productdata)}"
                 android:padding="10dp"
                 android:src="@drawable/wishlist_icon"
-                android:tint="@android:color/holo_red_light"
                 android:translationZ="10dp"
                 android:visibility="@{features.in_app_wishlist ? View.VISIBLE: View.GONE}"
                 bind:buttontype="normal"
                 bind:layout_constraintEnd_toEndOf="parent"
-                bind:layout_constraintTop_toTopOf="@+id/images" />
+                bind:layout_constraintTop_toTopOf="@+id/images"
+                bind:tint="@android:color/holo_red_light" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/review_section"
@@ -875,7 +879,8 @@
                     android:orientation="horizontal"
                     android:visibility="gone"
                     bind:layout_constraintTop_toBottomOf="@+id/ali_view_all_but"
-                    tools:listitem="@layout/review_list_item" />
+                    tools:listitem="@layout/review_list_item"
+                    tools:ignore="TooManyViews" />
 
                 <me.relex.circleindicator.CircleIndicator3
                     android:id="@+id/ali_review_indecator"
@@ -949,7 +954,7 @@
                     android:layoutAnimation="@anim/layout_animation"
                     bind:layout_behavior="@string/appbar_scrolling_view_behavior"
                     bind:layout_constraintBottom_toBottomOf="parent"
-                    bind:layout_constraintTop_toBottomOf="@id/personalisedyext"/>
+                    bind:layout_constraintTop_toBottomOf="@id/personalisedyext" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -983,7 +988,7 @@
                     android:layoutAnimation="@anim/layout_animation"
                     bind:layout_behavior="@string/appbar_scrolling_view_behavior"
                     bind:layout_constraintBottom_toBottomOf="parent"
-                    bind:layout_constraintTop_toBottomOf="@id/shopifyrecommended_title"/>
+                    bind:layout_constraintTop_toBottomOf="@id/shopifyrecommended_title" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
